<resources>
    <string name="app_name">HealthApp</string>
    <string name="scroll_text">\n\n\n
        This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is going to be too much text to show...\n\n\n\n\n
    This is the end of the text, stop scrolling!</string>
    <string name="text">Text</string>
    <string name="text2">Text</string>
    <string name="choice">Choice</string>
    <string name="todo">To Do</string>
    <string name="new_entry">new entry...</string>
    <string name="add">add</string>
    <string name="profile">Profile</string>
    <string name="name"><b>Smiley J. Smile</b></string>
    <string name="smiley_j_smile">Smiley J. Smile</string>
    <string name="warning"><b>Warning!</b> Do not click on the profile image.</string>
    <string name="x">×</string>
    <string name="lower_right">Lower Right</string>
    <string name="downhere">Down Here</string>
    <string name="hello">Hello There</string>
    <string name="colors">Colors</string>
    <string name="hi">Hi Again</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="search">Search</string>
    <string name="log_item">Log item</string>
    <string name="enter_exercise">Enter exercise:</string>
    <string name="time">Time (minutes)</string>
    <string name="cals">Calories burned (optional)</string>
    <string name="today">Today:</string>
    <string name="my_exercise_plan">My Exercise Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="total_calories">Total Calories:</string>

</resources>
