<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/idRLContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/colors"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:background="#000000"
            android:text="@string/hello"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFF00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="75dp"
            android:background="#FFFF00"
            android:text="@string/hi"
            android:textColor="#800080"
            android:textStyle="bold"
            android:textSize="20sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>