<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/idRLContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-345dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/profile"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/profile_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/image"
            android:text="@string/name"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linlayout"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_below="@+id/name"
            android:gravity="center"
            android:background="@android:color/holo_red_light"
            android:visibility="invisible"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/warning"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:text="@string/warning" />

            <TextView
                android:id="@+id/closenotif"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:text="@string/x" />

        </LinearLayout>
        
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


<!--
TODO
- fix name error
- add notification
-->
